Bug 182089 - Places sidebar in Open/Save dialog doesn't allow fixed icon sizes
Summary: Places sidebar in Open/Save dialog doesn't allow fixed icon sizes
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.43.0
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 161869 164286 196706 289694 333913 349341 383206 402074 423700 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-27 15:23 UTC by Stephan Sokolow
Modified: 2020-12-10 19:14 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.78
Sentry Crash Report:


Attachments
Small icons (52.43 KB, image/png)
2013-03-05 01:57 UTC, Dima Ryazanov
Details
Large icons (60.57 KB, image/png)
2013-03-05 01:57 UTC, Dima Ryazanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Sokolow 2009-01-27 15:23:52 UTC
Version:            (using )
OS:                Search
Installed from:    KDE 4.1.96

The places sidebar in the KDE 4 Open/Save dialog doesn't allow the user to specify a fixed icon size, instead dynamically sizing icons to fill the sidebar horizontally. (Which also happens to displease people with a lot of stored places who want to minimize the chances of vertical scrollbar use, like me)

Unfortunately, with application-specific bookmarks and Solid-provided devices in the sidebar, there's no one size a user can adjust the sidebar to in order to get their desired icon size.

At least users like me who want 16x16 icons can settle for either "just right" or "too narrow" in order to lock the icons at 16x16, but that's a very poor choice to have to make.
Comment 1 Christoph Feck 2009-08-12 15:32:31 UTC
*** Bug 196706 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2009-08-12 15:42:42 UTC
*** Bug 164286 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2009-08-12 16:11:05 UTC
*** Bug 161869 has been marked as a duplicate of this bug. ***
Comment 4 Janet 2009-08-27 20:27:23 UTC
And there are also people who need large icons to recognize them correctly. For those people there should be the option to lock the icon size in dolphin's places sidebar, even when a lot of partitions or removable media exist or media exist with long names. Most of the time the automatic resizing is nice but there are situations where it isn't appropriate.
Comment 5 frustphil 2009-09-21 05:20:32 UTC
I agree, there should be an option to disable auto-resizing of the panel. I for one, hate the feature. I want it to be fixed irregardless of the window size. Please hear us and implement this... Thanks for reading. =)
Comment 6 Frank Steinmetzger 2010-06-08 17:13:56 UTC
I was about to file a bug for Dolphin about this, it never occured to me that it also applies for the file dialogues.

Suggestion: because I’m not aware of any centralised system settings module that deals with the places bar, I propose to add "[ ] Automatically resize icons" to the context menu of the places bar itself. That way it is also easily accessible through file dialogues.
Comment 7 Christoph Feck 2011-12-25 15:13:23 UTC
*** Bug 289694 has been marked as a duplicate of this bug. ***
Comment 8 Janet 2012-07-06 20:25:29 UTC
Now with KDE SC 4.9 Beta the opposite occurs - fixed tiny icons. That's much more worse than the automatic resizing :(... Please let the user define a range in which the icons resize (32 to 64 or 16 to 16 (=fixed) or whatever).
Comment 9 DeMus 2012-09-02 05:44:39 UTC
Make Dolphin 4.9 use icons with variable sizes like 4.8. What we have now is unusable. The size of the icons is way too small. What happened to the choices Linux brings to their users? It's been taken away. The way I see it is, that KDE is slowly killing KDE. WHY?
Comment 10 Myriam Schweingruber 2012-09-07 14:54:54 UTC
Setting status to confirmed.
Comment 11 Janet 2012-09-07 15:57:17 UTC
Regarding Comment 8: I mistook the open/save dialog places with the places sidebar in dolphin. But nonetheless: there should be an option to have a fixed icon size in the open/save dialog places sidebar - or at least the icons in that sidebar shouldn't drop below the "small icons" size! With the automatic resizing as it is now the icons often get much too small. 

I could imagine a fixed size option that uses the "small icons" size (in my case that's 32). From my point of view  the icons in the open/save dialog places sidebar don't need to be as big as in dolphin's places sidebar, so "small icons" should do.
Comment 12 Christoph Feck 2012-09-23 01:14:10 UTC
Git commit 0a0231a340a21480207d967beb695a821155b58c by Christoph Feck.
Committed on 23/09/2012 at 03:08.
Pushed by cfeck into branch 'KDE/4.9'.

Respect Small icon size as minimum size in old places panel
Related: bug 264841

M  +1    -1    kfile/kfileplacesview.cpp
M  +3    -0    kfile/kfilewidget.cpp

http://commits.kde.org/kdelibs/0a0231a340a21480207d967beb695a821155b58c
Comment 13 Christoph Feck 2012-09-25 21:01:41 UTC
Git commit 8620d024d6819a78232ff9edf90766b77c43acde by Christoph Feck.
Committed on 25/09/2012 at 22:54.
Pushed by cfeck into branch 'KDE/4.9'.

Fix KFilePlacesView::sizeHint() to use correct size and margins

FIXED-IN: 4.9.2
Related: bug 307359, bug 264841

M  +1    -1    kfile/kfileplacesview.cpp

http://commits.kde.org/kdelibs/8620d024d6819a78232ff9edf90766b77c43acde
Comment 14 rockonthemoonfm 2013-02-18 17:27:01 UTC
sidebar places icons are still autoresizing when widget is resized in 4.10.
this is not the desirable behavior, the dophin one is.
so bug is not fixed yet.
Comment 15 Dima Ryazanov 2013-03-05 01:57:25 UTC
Created attachment 77759 [details]
Small icons
Comment 16 Dima Ryazanov 2013-03-05 01:57:53 UTC
Created attachment 77760 [details]
Large icons
Comment 17 Dima Ryazanov 2013-03-05 01:59:29 UTC
The icons change size pretty arbitrarily when I resize the window, even though the size of the sidebar does not change. (See the screenshots.)
Comment 18 rockonthemoonfm 2013-07-01 11:25:29 UTC
bug NOT fixed in 4.11 beta 2.
Comment 19 Christoph Feck 2013-07-12 01:46:46 UTC
Joseph, check the bug status. There is no need to reiterate it for each KDE release.
Comment 20 rockonthemoonfm 2013-07-12 07:01:33 UTC
ok, tought it would help somehow. maybe for UNCONFIRMED bugs?
Comment 21 Christoph Feck 2014-04-27 00:51:50 UTC
*** Bug 333913 has been marked as a duplicate of this bug. ***
Comment 22 Christoph Feck 2015-09-24 00:16:14 UTC
*** Bug 349341 has been marked as a duplicate of this bug. ***
Comment 23 Christoph Feck 2017-08-13 11:55:36 UTC
*** Bug 383206 has been marked as a duplicate of this bug. ***
Comment 24 Christoph Feck 2018-12-28 17:54:09 UTC
*** Bug 402074 has been marked as a duplicate of this bug. ***
Comment 25 Patrick Silva 2020-06-30 12:51:26 UTC
I can't reproduce this issue.
The icons size no longer changes when the sidebar is resized.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 26 Nate Graham 2020-06-30 14:12:27 UTC
This is technically still an issue, but I suspect it's being masked now by the fact that the number of places items is greater than it was in the past. The more items, the taller the window needs to be to trigger the automatic resizing behavior.
Comment 27 Patrick Silva 2020-06-30 14:15:57 UTC
I think that you are right. Kdialog with less places items is affected,
see bug 423700.
Comment 28 Nate Graham 2020-06-30 14:16:50 UTC
*** Bug 423700 has been marked as a duplicate of this bug. ***
Comment 29 Nate Graham 2020-12-10 19:14:20 UTC
The commit hook didn't seem to notice for some reason, but this was implemented by Ahmad Samir with https://invent.kde.org/frameworks/kio/-/commit/e4032084407d4d0fc2be22fb5a4a4b74200e0d11 in Frameworks 5.78!