KFilePlacesView: allow setting a static icon size

Add a new "icon size" submenu (like the one in Dolphin's places panel);
where the user can set a static icon size, or select "auto resize", the
latter keeps the current behaviour where the icon size adapts to how much
space is available.

BUG: 182089